--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -6,3 +6,11 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.container {
+  display: left;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
